Add the Vans Notes in HMD scan dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -386,6 +386,9 @@
     "txt-basicInfo": "Basic Info",
     "txt-basicInfoExample": "Basic Info Example",
     "txt-availableHost": "Available Host",
+    "txt-vansNotes": "Status and Notes",
+    "txt-status": "Status",
+    "txt-notes": "Notes",
     "txt-vendor": "Vendor",
     "txt-product": "Product",
     "txt-version": "Version",
