Implement the vans notes save for Host and Safety Details tabs.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -127,6 +127,7 @@
   "txt-previousPage": "Previous Page",
   "txt-nextPage": "Next Page",
   "txt-save": "Save",
+  "txt-saved": "Saved",
   "txt-manage": "Manage",
   "txt-path": "Path",
   "txt-cpu": "CPU",
