--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -127,6 +127,7 @@
   "txt-previousPage": "上一頁",
   "txt-nextPage": "下一頁",
   "txt-save": "儲存",
+  "txt-saved": "已儲存",
   "txt-manage": "管理",
   "txt-path": "路徑",
   "txt-cpu": "中央處理器",
