Add Vans annotation and filter for both HMD and Host assessment pages.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -388,8 +388,9 @@
     "txt-basicInfoExample": "Basic Info Example",
     "txt-availableHost": "Available Host",
     "txt-vansNotes": "Status and Notes",
+    "txt-deleteVansNotes": "Delete Notes",
     "txt-status": "Status",
-    "txt-notes": "Notes",
+    "txt-annotation": "Notes",
     "txt-vendor": "Vendor",
     "txt-product": "Product",
     "txt-version": "Version",
