--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -388,8 +388,9 @@
     "txt-basicInfoExample": "基本資訊範例",
     "txt-availableHost": "存在主機",
     "txt-vansNotes": "處理狀態與註記",
+    "txt-deleteVansNotes": "刪除註記",
     "txt-status": "處理狀態",
-    "txt-notes": "註記",
+    "txt-annotation": "註記",
     "txt-vendor": "廠商",
     "txt-product": "產品",
     "txt-version": "版號",
