--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -111,6 +111,8 @@
   "txt-color": "Color",
   "txt-interval": "Interval",
   "txt-clear": "Clear",
+  "txt-clearText": "Clear",
+  "txt-clear": "Clear",
   "txt-connect": "Connect",
   "txt-import": "Import",
   "txt-export": "Export",
