--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -111,6 +111,7 @@
   "txt-color": "顏色",
   "txt-interval": "週期",
   "txt-clear": "清除條件",
+  "txt-clearText": "清除",
   "txt-connect": "連線",
   "txt-import": "匯入",
   "txt-export": "匯出",
