Add radio buttons for Vans notes new/existing options.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -61,6 +61,7 @@
   "txt-edit": "Edit",
   "txt-add": "Add",
   "txt-add2": "Add",
+  "txt-existing": "Existing",
   "txt-query": "Search",
   "txt-remove": "Remove",
   "txt-refresh": "Refresh",
