--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -61,6 +61,7 @@
   "txt-edit": "編輯",
   "txt-add": "新增",
   "txt-add2": "加入",
+  "txt-existing": "現有",
   "txt-query": "查詢",
   "txt-remove": "移除",
   "txt-refresh": "更新",
