update soc rule ui

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -486,10 +486,13 @@
       "txt-noOpenQuery": "Query can not be Blank",
       "txt-threasholdCount": "Threashold count must be less than 1,000 and greater than 0",
       "txt-addPatternScript": "Custom Alert Query",
+      "txt-addSOCScript": "Custom SOC Incident Template",
       "txt-public": "Public",
       "txt-patternQuery1": "In",
       "txt-patternQuery2": "minutes, alert occurs more than or equal to",
       "txt-patternQuery3": "times",
+      "txt-socQuery1": "A maximum of ",
+      "txt-socQuery2": "generated within one hour",
       "txt-mark": "Filter / Mark",
       "txt-clear": "Clear",
       "txt-top10text": "TOP 10 Dst. Service/Dst. Host/Dst. IP",
