--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -359,6 +359,7 @@
     "txt-isAreaNull": "未設定樓層",
     "txt-isSeatNull": "未設定座位",
     "txt-isConnected": "已連線",
+    "txt-isDisconnected": "未連線",
     "txt-title-scanFile": "惡意程式資訊",
     "txt-title-gcbDetection": "GCB漏洞掃描資訊",
     "txt-title-getFileIntegrity": "檔案完整性掃描資訊",
