--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -344,6 +344,7 @@
     "txt-hostList": "主機列表",
     "txt-deviceMap": "裝置地圖",
     "txt-safetyScan": "安全掃描",
+    "txt-vans": "VANS",
     "txt-safetyScanType": "安全掃描類型",
     "txt-export-cpe": "匯出CPE",
     "txt-report-nccst": "回報NCCST",
@@ -404,7 +405,14 @@
     "txt-os": "作業系統",
     "txt-update": "更新",
     "txt-edition": "版本",
-    "txt-language": "語言"
+    "txt-language": "語言",
+    "txt-dept": "單位",
+    "txt-vansCount": "CVE通報(總數)",
+    "txt-vansHigh": "CVE高風險",
+    "txt-cveMedium": "CVE中風險",
+    "txt-vansLow": "CVE低風險",
+    "txt-gcbCount": "GCB問題",
+    "txt-malwareCount": "Malware威脅"
   },
 
   "alert": {
