Fix the styles for Vans charts child node. Add actions buttons in the chart.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -413,7 +413,11 @@
     "txt-cveMedium": "CVE Medium",
     "txt-vansLow": "CVE Low",
     "txt-gcbCount": "GCB Count",
-    "txt-malwareCount": "Malware Count"
+    "txt-malwareCount": "Malware Count",
+    "txt-tableOptions": "Actions",
+    "txt-hmdStats": "HMD Stats",
+    "txt-deviceCount": "Device Count",
+    "txt-hmdCount": "HMD Count"
   },
 
   "alert": {
