--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -550,8 +550,17 @@
     "serviceName": "服務名稱"
   },
   "incidentFields": {
+    "severity": "嚴重等級",
+    "impact": "影響等級",
+    "eventDescription": "觸發規則",
+    "accountQueryDTO": {
+      "module":  "建立來源",
+      "name": "查詢條件名稱"
+    },
+    "flowId": "流程類型",
     "isDefault": "預設機關",
     "isGovernment":"是否回傳NCCST",
+    "flowName": "流程名稱",
     "id": "事件單編號",
     "title": "事件主旨",
     "category": "事件類別",
