Add Pie Chart for Vans Host Assessment page. Minor style and code updates for tables.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -421,7 +421,8 @@
     "txt-hmdCount": "HMD Count",
     "txt-deviceName": "Device Name",
     "txt-deviceIP": "Device IP",
-    "txt-mark": "Mark"
+    "txt-mark": "Mark",
+    "txt-parentDept": "Parent Department"
   },
 
   "alert": {
