Minor color palette and style updates for Vans Notes.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -203,6 +203,7 @@
   "txt-downloadTask": "Downlaod",
   "txt-deleteTask": "Delete Task",
   "txt-retriggerTask": "Retrigger Task",
+  "txt-palette": "Palette",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
