--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -202,6 +202,7 @@
   "txt-downloadTask": "下載",
   "txt-deleteTask": "刪除任務",
   "txt-retriggerTask": "重新發送任務",
+  "txt-palette": "調色盤",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
