--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -40,6 +40,7 @@
   "-1008": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
   "-1009": "密碼錯誤",
   "-1010": "登入錯誤",
+  "-1011": "連線Email伺服器失敗",
 
   "-2001": "目標未明",
   "-2002": "已到期",
