--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -501,6 +501,8 @@
       "txt-enterQueryName": "輸入查詢條件名稱",
       "txt-openQuery": "開啟查詢條件",
       "txt-saveQuery": "儲存查詢條件",
+      "txt-publicOpenQuery": "開啟公用查詢條件",
+      "txt-publicSaveQuery": "儲存公用查詢條件",
       "txt-querySaved": "查詢條件已儲存",
       "txt-queryName": "查詢條件名稱",
       "txt-addQuery": "新增查詢條件",
