update incident flow

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -13,18 +13,20 @@
 	"txt-createIncident": "Create Incident",
 	"txt-incident-device": "Incident Device",
 	"txt-incident-unit": "Incident Unit",
-	"txt-incident-log": "Incident Log",
+	"txt-incident-log": "Send Record",
 	"txt-incident-management": "Incident",
+	"txt-incident-sign": "Pending Incidents",
 	"txt-incident-modify": "Incident Management",
 	"txt-incident-search": "History Search",
 	"txt-incident-device-management": "Incident Device Management",
 	"txt-incident-unit-management": "Incident Unit Management",
-	"txt-incident-config-management": "Incident Config Management",
+	"txt-incident-config-management": "Config Management",
 	"txt-incident-log-management": "Incident Publish Record",
-	"txt-incident-isac-management": "ISAC Config Management",
-	"txt-incident-soc-management": "G-SOC Config Management",
-	"txt-incident-soc-rule": "Incident Automated Management",
-	"txt-incident-soc-flow": "Incident Flow Management",
+	"txt-incident-config": "Config Management",
+	"txt-incident-isac-management": "ISAC Config",
+	"txt-incident-soc-management": "G-SOC Config",
+	"txt-incident-soc-rule": "Automated Rule Management",
+	"txt-incident-soc-flow": "Flow Template Management",
 	"txt-incident-isac-config": "ISAC Config Settings",
 	"txt-incident-soc-config": "SOC Config Settings",
 	"txt-incident-events": "Incident Events",
