--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -13,18 +13,20 @@
 	"txt-createIncident": "通報事件",
 	"txt-incident-device": "資安事件設備",
 	"txt-incident-unit": "資安事件申報機關",
-	"txt-incident-log": "事件發布紀錄",
+	"txt-incident-log": "發布紀錄",
 	"txt-incident-management": "情資事件",
+	"txt-incident-sign": "待處理情資事件",
 	"txt-incident-modify": "情資事件管理",
-	"txt-incident-search": "所有紀錄查詢",
+	"txt-incident-search": "歷史事件紀錄查詢",
 	"txt-incident-device-management": "設備管理",
 	"txt-incident-unit-management": "機關管理",
 	"txt-incident-config-management": "事件參數設定",
-	"txt-incident-log-management": "事件發布紀錄",
-	"txt-incident-isac-management": "轉發ISAC設定管理",
-	"txt-incident-soc-management": "轉發政府GSOC設定管理",
-	"txt-incident-soc-rule": "情資事件自動化模板管理",
-	"txt-incident-soc-flow": "情資事件流程管理",
+	"txt-incident-log-management": "發布紀錄",
+	"txt-incident-config": "轉發設定",
+	"txt-incident-isac-management": "ISAC設定",
+	"txt-incident-soc-management": "政府G-SOC設定",
+	"txt-incident-soc-rule": "自動化模板管理",
+	"txt-incident-soc-flow": "流程管理",
 	"txt-incident-isac-config": "ISAC參數設定",
 	"txt-incident-soc-config": "SOC參數設定",
 	"txt-incident-events": "監控觸發紀錄",
