Implement the overview table for SOAR page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -538,6 +538,10 @@
     }
   },
 
+  "soar": {
+    "txt-ruleList": "SOAR Rules"
+  },
+
   "notifications": {
     "txt-testEmails": "Test Emails",
     "txt-settings": "Notification Settings",
