Complete the SOAR rule table, switch, filter and delete functionality.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -539,7 +539,10 @@
   },
 
   "soar": {
-    "txt-ruleList": "SOAR Rules"
+    "txt-ruleList": "SOAR Rules",
+    "txt-disableRule": "Confirm to disable rule",
+    "txt-addRule": "Add Rule",
+    "txt-deleteRule": "Delete Rule"
   },
 
   "notifications": {
