--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -639,9 +639,10 @@
     "createDttm": "Create Datetime"
   },
   "soarFields": {
-    "flowName": "Name",
-    "aggField": "AGG File ID",
+    "flowName": "Flow Name",
+    "aggField": "AGG Field",
     "adapter": "Adapter",
+    "condition": "SOAR Condition",
     "action": "Action ",
     "status": "Status",
     "isEnable": "Enable"
