--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -539,9 +539,12 @@
 
   "soar": {
     "txt-ruleList": "SOAR 規則清單",
+    "txt-mainSettings": "SOAR通用基本設定",
     "txt-disableRule": "請確認是否關閉此規則",
     "txt-addRule": "新增規則",
-    "txt-deleteRule": "刪除規則"
+    "txt-deleteRule": "刪除規則",
+    "txt-adapter": "Adapter",
+    "txt-action": "Action"
   },
 
   "notifications": {
