--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -539,12 +539,14 @@
 
   "soar": {
     "txt-ruleList": "SOAR 規則清單",
-    "txt-mainSettings": "SOAR通用基本設定",
+    "txt-soarSettings": "SOAR通用基本設定",
+    "txt-soarFlow": "SOAR規則設定",
     "txt-disableRule": "請確認是否關閉此規則",
     "txt-addRule": "新增規則",
     "txt-deleteRule": "刪除規則",
     "txt-adapter": "Adapter",
-    "txt-action": "Action"
+    "txt-action": "Action",
+    "txt-soarRuleInfo": "SOAR rule info"
   },
 
   "notifications": {
