Add NCCST report settings for HMD settings page. Update virusTotal redirect logic.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -813,6 +813,11 @@
     "txt-duplicatedIP": "IP already exists, please enter another IP",
     "txt-noDevice": "No device is available",
     "txt-VansProductRegex": "VANS Software List",
+    "txt-reportNCCST": "Report NCCST Settings",
+    "txt-unitOID": "Unit OID",
+    "txt-unitName": "Unit Name",
+    "txt-apiKey": "API Key",
+    "txt-apiUrl": "API Url",
     "txt-CPEconvertTest": "CPE Convert Test",
     "txt-CPEinputTest": "Input CPE",
     "txt-CPEconvertResult": "CPE Convert Result",
