--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -812,6 +812,11 @@
     "txt-duplicatedIP": "IP已存在，請重新輸入",
     "txt-noDevice": "此座位無裝置",
     "txt-VansProductRegex": "VANS軟體抓取表",
+    "txt-reportNCCST": "回報NCCST設定",
+    "txt-unitOID": "機關OID",
+    "txt-unitName": "機關名稱",
+    "txt-apiKey": "API Key",
+    "txt-apiUrl": "API Url",
     "txt-CPEconvertTest": "CPE轉換測試",
     "txt-CPEinputTest": "輸入CPE測試",
     "txt-CPEconvertResult": "轉換結果CPE",
