Implement the edit and SOAR flow settings section.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -552,6 +552,7 @@
     "txt-adapter": "Adapter",
     "txt-action": "Action",
     "txt-soarRuleInfo": "SOAR rule info",
+    "txt-soarRuleCondition": "SOAR rule Condition",
     "txt-ruleEditSettings": "Settings"
   },
 
