add delete & restart in soc

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -70,9 +70,16 @@
 	"txt-draw-msg": "Whether to Draw Incident",
 	"txt-draw-success": "Draw Success",
 	"txt-draw-fail": "Draw Fail",
-	"txt-send-msg": "Whether to Send Incident",
-	"txt-sendCheck": ", Whether to Send Incident directly?",
-	"txt-sendCheckHealth": "whether to Send Health Status Statistic CSV ?",
+	"txt-delete-msg": "Whether to delete Incident",
+	"txt-delete-success": "Delete Success",
+	"txt-delete-fail": "Delete Fail",
+	"txt-restart": "Restart Flow",
+	"txt-restart-msg": "Whether to restart Flow?",
+	"txt-restart-success": "Restart Flow Success",
+	"txt-restart-fail": "Restart Flow Fail",
+	"txt-send-msg": "Whether to send Incident",
+	"txt-sendCheck": ", Whether to send Incident directly?",
+	"txt-sendCheckHealth": "whether to send Health Status Statistic CSV ?",
 	"txt-send-status": "Send Status",
 	"txt-send-type": "Send Incident Type",
 	"txt-download": "Download",
