--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -72,6 +72,13 @@
 	"txt-draw-msg": "是否抽單",
 	"txt-draw-success": "抽單成功",
 	"txt-draw-fail": "抽單失敗",
+	"txt-delete-msg": "是否刪單",
+	"txt-delete-success": "刪單成功",
+	"txt-delete-fail": "刪單失敗",
+	"txt-restart": "重啟流程",
+	"txt-restart-msg": "是否重啟流程",
+	"txt-restart-success": "重啟流程成功",
+	"txt-restart-fail": "重啟流程失敗",
 	"txt-sendCheck": "，是否直接發布?",
 	"txt-sendCheckHealth": "是否手動發布健康狀態統計單?",
 	"txt-send-status": "發布狀態",
