--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -550,11 +550,11 @@
     "txt-serviceNotifications": "Service Settings",
     "txt-edgeNotifications": "Edge Settings",
     "txt-alertNotifications": "Alert Settings",
-    "txt-socNotifications": "Soc Settings",
+    "txt-socNotifications": "SOC Settings",
     "txt-serviceError": "Service Status Error",
     "txt-conectionsError": "Connections Status Error",
     "txt-dailyAlert": "Daily Alert Statistics",
-    "txt-sendResult": "Send Soc Notification",
+    "txt-sendResult": "SOC Incident Notification",
     "txt-smtpServer": "SMTP Server",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "Sender",
