--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -549,11 +549,39 @@
     "txt-disableRule": "請確認是否關閉此規則",
     "txt-addRule": "新增規則",
     "txt-deleteRule": "刪除規則",
+    "txt-nodeSettings": "節點$t(txt-settings)",
+    "txt-linkSettings": "連結$t(txt-settings)",
     "txt-adapter": "Adapter",
     "txt-action": "Action",
     "txt-soarRuleInfo": "SOAR rule info",
     "txt-soarRuleCondition": "SOAR rule Condition",
-    "txt-ruleEditSettings": "設定"
+    "txt-gap": "Gap",
+    "txt-protocol": "Protocol",
+    "txt-port": "Port",
+    "txt-path": "Path",
+    "txt-file": "File",
+    "txt-title": "Title",
+    "txt-content": "Content",
+    "txt-id": "ID",
+    "txt-action": "Action",
+    "txt-ip": "IP",
+    "txt-drop": "Drop",
+    "txt-severityType": "Severity Type",
+    "txt-field": "Field",
+    "txt-from": "From",
+    "txt-to": "To",
+    "txt-returnField": "Return Field",
+    "txt-separator": "Separator",
+    "txt-returnIndex": "Return Index",
+    "txt-loopItem": "Loop Item",
+    "txt-trueCount": "True Count",
+    "txt-trueConditionHit": "True Condition Hit",
+    "txt-trueConditionField": "True Condition Field",
+    "txt-tipHost": "Tip Host",
+    "txt-value": "Value",
+    "txt-equal": "Equal",
+    "txt-ignoreCase": "Ignore Case",
+    "txt-operators": "Operators"
   },
 
   "notifications": {
