--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -554,8 +554,8 @@
     "txt-linkSettings": "Link $t(txt-settings)",
     "txt-adapter": "Adapter",
     "txt-action": "Action",
-    "txt-soarRuleInfo": "SOAR rule info",
-    "txt-soarRuleCondition": "SOAR rule Condition",
+    "txt-soarRuleInfo": "SOAR Rule Info",
+    "txt-soarRuleCondition": "SOAR Rule Condition",
     "txt-gap": "Gap",
     "txt-protocol": "Protocol",
     "txt-port": "Port",
@@ -582,7 +582,17 @@
     "txt-value": "Value",
     "txt-equal": "Equal",
     "txt-ignoreCase": "Ignore Case",
-    "txt-operators": "Operators"
+    "txt-operators": "Operators",
+    "txt-smtpServer": "SMTP Server",
+    "txt-smtpPort": "SMTP Port",
+    "txt-sender": "Sender",
+    "txt-smtpConnectType": "SMTP Connect Type",
+    "txt-emailAuthentication": "Authentication",
+    "txt-senderAcct": "Sender Account",
+    "txt-senderPasswd": "Sender Password",
+    "txt-receiver": "Recipient Email",
+    "txt-title": "Title",
+    "txt-content": "Content"
   },
 
   "notifications": {
