--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -80,7 +80,7 @@
 	"txt-incident-event": "Security Monitoring",
 	"txt-incident-related": "Correlation Analysis",
 	"txt-incident-health": "Health Status Statistic",
-	"txt-export-all": "Export All Incidents",
+	"txt-export-all": "Export Incidents in Search List",
 	"txt-addIncident-events": "Add Security Monitoring Incident",
 	"txt-addIncident-ttps": "Add Correlation Analysis Incident",
 	"txt-viewIncident-events": "View Security Monitoring Incident",
