--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -513,6 +513,7 @@
       "txt-threasholdCount": "統整次數不得大於1,000或小於0",
       "txt-addPatternScript": "定義告警條件",
       "txt-addSOCScript": "定義自動化事件單條件",
+      "txt-enableSOCScript": "啟用自動化事件單條件",
       "txt-public": "共用",
       "txt-patternQuery1": "統整",
       "txt-patternQuery2": "分鐘資料，超過或等於",
@@ -591,7 +592,12 @@
     "txt-senderPasswd": "寄件者密碼",
     "txt-receiver": "收件者郵件信箱",
     "txt-title": "主旨",
-    "txt-content": "內容"
+    "txt-content": "內容",
+
+    "txt-upload": "上傳測試Log檔",
+    "txt-upload-msg": "請輸入或上傳事件Logs資料",
+    "txt-Settings": "事件測試",
+    "txt-dryRun": "執行測試"
   },
 
   "notifications": {
@@ -637,6 +643,7 @@
     "txt-addMultiple": "上傳多筆",
     "txt-importTIMAP": "上傳TIMAP壓縮檔",
     "txt-threatsFile": "情資檔案",
+    "txt-logFile": "日誌檔案",
     "txt-geography": "地理分布",
     "txt-addThreat": "新增威脅情資",
     "txt-importThreat": "匯入威脅情資",
