adjust request not format json to backend

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -598,13 +598,20 @@
     "txt-upload-msg": "Please enter or upload event Logs.",
     "txt-Settings": "Event Testing",
     "txt-dryRun": "Run",
+    "txt-dryRunLogMissing": "Testing Log could not empty",
+    "txt-error-400": "Bad Request",
     "txt-error-404": "SOAR flow id not found",
     "txt-error-432": "Node parameter missing",
     "txt-error-433": "Link start and end of link not consist",
+    "txt-error-434": "Parameter Parse Error",
     "txt-error-451": "Multiple link on adapter",
     "txt-error-452": "Node or Link has Error",
     "txt-error-453": "No node link to adapter",
     "txt-error-460": "Port in adapter has been used",
+    "txt-error-461": "Logs Don't Contain Required Field.",
+    "txt-error-462": "Operators Executed Error.",
+    "txt-error-463": "Flow Condition Not Passed.",
+    "txt-error-464": "Create Flow Instance Failed(Possible aggField are missing).",
     "txt-error-500": "SOAR server error"
   },
 
