--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -597,13 +597,20 @@
     "txt-upload-msg": "請輸入或上傳事件Logs資料",
     "txt-Settings": "事件測試",
     "txt-dryRun": "執行測試",
+    "txt-dryRunLogMissing": "測試Log不得為空值",
+    "txt-error-400": "Bad Request",
     "txt-error-404": "無對應SOAR流程",
     "txt-error-432": "欄位參數錯誤",
     "txt-error-433": "連結起訖點不存在",
+    "txt-error-434": "Parameter Parse Error",
     "txt-error-451": "adapter上有多個連結",
     "txt-error-452": "節點或連結錯誤",
     "txt-error-453": "Adapter沒有連結節點",
     "txt-error-460": "Adapter上的port已被使用",
+    "txt-error-461": "Logs Don't Contain Required Field.",
+    "txt-error-462": "Operators Executed Error.",
+    "txt-error-463": "Flow Condition Not Passed.",
+    "txt-error-464": "Create Flow Instance Failed(Possible aggField are missing).",
     "txt-error-500": "SOAR 主機錯誤"
   },
 
