--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -61,6 +61,8 @@
 	"txt-send": "發布",
 	"txt-send-success": "發布成功",
 	"txt-send-fail": "發布失敗",
+	"txt-send-task-success": "發布任務成功",
+	"txt-send-task-fail": "發布任務失敗",
 	"txt-send-connect-fail": "發布失敗(連線失敗)",
 	"txt-send-other-fail": "發布失敗(系統錯誤)",
 	"txt-send-msg": "是否發布",
