--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -28,6 +28,14 @@
   "-33": "Agent (ipPort) is not Reachable!",
 
   "-100": "呼叫網路服務失敗",
+  "-404": "無對應SOAR流程",
+  "-432": "欄位參數錯誤",
+  "-433": "連結起訖點不存在",
+  "-451": "adapter上有多個連結",
+  "-452": "節點或連結錯誤",
+  "-453": "Adapter沒有連結節點",
+  "-460": "Adapter上的port已被使用",
+  "-500": "SOAR主機錯誤",
 
   "-1000": "發生未預期的錯誤",
   "-1001": "請輸入所有必填欄位",
